@@ -1,6 +1,6 @@
 /*
  * SonarQube Java
- * Copyright (C) 2012-2021 SonarSource SA
+ * Copyright (C) 2012-2022 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -24,6 +24,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -34,6 +35,9 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.junit.jupiter.migrationsupport.rules.EnableRuleMigrationSupport;
 import org.junit.rules.TemporaryFolder;
+import org.sonar.api.SonarEdition;
+import org.sonar.api.SonarQubeSide;
+import org.sonar.api.SonarRuntime;
 import org.sonar.api.batch.fs.InputFile;
 import org.sonar.api.batch.rule.CheckFactory;
 import org.sonar.api.batch.sensor.internal.SensorContextTester;
@@ -59,7 +63,6 @@ import org.sonar.plugins.java.api.tree.CompilationUnitTree;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
@@ -71,6 +74,9 @@ import static org.mockito.Mockito.when;
 @EnableRuleMigrationSupport
 class JavaFrontendTest {
 
+  public static final SonarRuntime SONARLINT_RUNTIME = SonarRuntimeImpl.forSonarLint(Version.create(6, 7));
+  public static final SonarRuntime SONARQUBE_RUNTIME = SonarRuntimeImpl.forSonarQube(Version.create(8, 9), SonarQubeSide.SCANNER, SonarEdition.COMMUNITY);
+
   @Rule
   public TemporaryFolder temp = new TemporaryFolder();
 
@@ -80,8 +86,8 @@ class JavaFrontendTest {
   private FileLinesContext fileLinesContext;
   private ClasspathForMain javaClasspath;
   private ClasspathForTest javaTestClasspath;
-  private TestIssueFilter mainCodeIssueScannerAndFilter = new TestIssueFilter();;
-  private TestIssueFilter testCodeIssueScannerAndFilter = new TestIssueFilter();;
+  private TestIssueFilter mainCodeIssueScannerAndFilter = new TestIssueFilter();
+  private TestIssueFilter testCodeIssueScannerAndFilter = new TestIssueFilter();
 
   private SonarComponents sonarComponents;
   private SensorContextTester sensorContext;
@@ -91,7 +97,7 @@ class JavaFrontendTest {
 
     String code = "/***/\nclass A {\n String foo() {\n  return foo();\n }\n}";
 
-    InputFile defaultFile = scan(code).get(0);
+    InputFile defaultFile = scan(SONARLINT_RUNTIME, code).get(0);
 
     // No symbol table : check reference to foo is empty.
     assertThat(sensorContext.referencesForSymbolAt(defaultFile.key(), 3, 8)).isNull();
@@ -108,7 +114,7 @@ class JavaFrontendTest {
 
   @Test
   void parsing_errors_should_be_reported_to_sonarlint() throws Exception {
-    scan("class A {");
+    scan(SONARLINT_RUNTIME, "class A {");
 
     assertThat(sensorContext.allAnalysisErrors()).hasSize(1);
     assertThat(sensorContext.allAnalysisErrors().iterator().next().message()).startsWith("Parse error at line 1 column 8");
@@ -116,7 +122,7 @@ class JavaFrontendTest {
 
   @Test
   void should_add_issue_filter_to_JavaFrontend_scanners() throws IOException {
-    scan("class A { }");
+    scan(SONARQUBE_RUNTIME, "class A { }");
     assertThat(sensorContext.allAnalysisErrors()).isEmpty();
     assertThat(mainCodeIssueScannerAndFilter.lastScannedTree).isInstanceOf(CompilationUnitTree.class);
   }
@@ -124,7 +130,7 @@ class JavaFrontendTest {
   @org.junit.jupiter.api.Disabled("new semantic analysis does not throw exception in this case")
   @Test
   void semantic_errors_should_be_reported_to_sonarlint() throws Exception {
-    scan("class A {} class A {}");
+    scan(SONARLINT_RUNTIME, "class A {} class A {}");
 
     assertThat(sensorContext.allAnalysisErrors()).hasSize(1);
     assertThat(sensorContext.allAnalysisErrors().iterator().next().message()).isEqualTo("Registering class 2 times : A");
@@ -143,14 +149,16 @@ class JavaFrontendTest {
   }
 
   @Test
-  void test_analysisCancelled_with_null_sonarComponents() {
+  void test_getters_with_null_sonarComponents() {
     JavaFrontend frontend = new JavaFrontend(new JavaVersionImpl(), null, new Measurer(sensorContext, mock(NoSonarFilter.class)), mock(JavaResourceLocator.class), mainCodeIssueScannerAndFilter);
+    assertThat(frontend.isAutoScan()).isFalse();
+    assertThat(frontend.isBatchModeEnabled()).isFalse();
     assertThat(frontend.analysisCancelled()).isFalse();
   }
 
   @Test
   void test_file_by_file_scan() throws IOException {
-    scan("class A {}", "class B { A a; }");
+    scan(SONARLINT_RUNTIME, "class A {}", "class B { A a; }");
     assertThat(sensorContext.allAnalysisErrors()).isEmpty();
     String allLogs = String.join("\n", logTester.logs());
     assertThat(allLogs)
@@ -161,10 +169,24 @@ class JavaFrontendTest {
   }
 
   @Test
+  void test_no_batch_mode_when_sonarlint() throws IOException {
+    MapSettings settings = new MapSettings();
+    settings.setProperty("sonar.java.internal.batchMode", "true");
+    scan(settings, SONARLINT_RUNTIME, "class A {}", "class B { A a; }");
+    assertThat(sensorContext.allAnalysisErrors()).isEmpty();
+    String allLogs = String.join("\n", logTester.logs());
+    assertThat(allLogs)
+      .doesNotContain("Using ECJ batch to parse source files.")
+      .contains("Java \"Main\" source files AST scan");
+    assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(2);
+    assertThat(testCodeIssueScannerAndFilter.scanFileInvocationCount).isZero();
+  }
+
+  @Test
   void test_as_batch_scan() throws IOException {
     MapSettings settings = new MapSettings();
     settings.setProperty("sonar.java.internal.batchMode", "true");
-    scan(settings, "class A {}", "class B { A a; }");
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B { A a; }");
     assertThat(sensorContext.allAnalysisErrors()).isEmpty();
     String allLogs = String.join("\n", logTester.logs());
     assertThat(allLogs)
@@ -178,7 +200,7 @@ class JavaFrontendTest {
   void test_as_batch_scan_main_and_test() throws IOException {
     MapSettings settings = new MapSettings();
     settings.setProperty("sonar.java.internal.batchMode", "true");
-    scan(settings, "class A {}", "class ATest { A a; }");
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class ATest { A a; }");
     assertThat(sensorContext.allAnalysisErrors()).isEmpty();
     String allLogs = String.join("\n", logTester.logs());
     assertThat(allLogs)
@@ -190,7 +212,7 @@ class JavaFrontendTest {
 
   @Test
   void test_end_of_analysis_should_be_called_once() throws IOException {
-    scan("class A {}", "class B {}");
+    scan(SONARLINT_RUNTIME, "class A {}", "class B {}");
     assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(2);
     assertThat(mainCodeIssueScannerAndFilter.endOfAnalysisInvocationCount).isEqualTo(1);
   }
@@ -199,7 +221,16 @@ class JavaFrontendTest {
   void test_end_of_analysis_should_be_called_once_with_batch() throws IOException {
     MapSettings settings = new MapSettings();
     settings.setProperty("sonar.java.internal.batchMode", "true");
-    scan(settings, "class A {}", "class B { A a; }");
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B { A a; }");
+    assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(2);
+    assertThat(mainCodeIssueScannerAndFilter.endOfAnalysisInvocationCount).isEqualTo(1);
+  }
+
+  @Test
+  void test_end_of_analysis_should_be_called_once_with_several_batches() throws IOException {
+    MapSettings settings = new MapSettings();
+    settings.setProperty(SonarComponents.SONAR_BATCH_SIZE_KEY, 0L);
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B { A a; }");
     assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(2);
     assertThat(mainCodeIssueScannerAndFilter.endOfAnalysisInvocationCount).isEqualTo(1);
   }
@@ -207,7 +238,7 @@ class JavaFrontendTest {
   @Test
   void should_handle_analysis_cancellation() throws IOException {
     mainCodeIssueScannerAndFilter.isCancelled = true;
-    scan("class A {}", "class B { A a; }");
+    scan(SONARLINT_RUNTIME, "class A {}", "class B { A a; }");
     assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(1);
     assertThat(mainCodeIssueScannerAndFilter.endOfAnalysisInvocationCount).isEqualTo(1);
   }
@@ -217,7 +248,7 @@ class JavaFrontendTest {
     mainCodeIssueScannerAndFilter.isCancelled = true;
     MapSettings settings = new MapSettings();
     settings.setProperty("sonar.java.internal.batchMode", "true");
-    assertThatThrownBy(() -> scan(settings, "class A {}", "class B { A a; }"))
+    assertThatThrownBy(() -> scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B { A a; }"))
       .isInstanceOf(AnalysisException.class)
       .hasMessage("Analysis cancelled")
       .hasCauseInstanceOf(OperationCanceledException.class);
@@ -225,14 +256,14 @@ class JavaFrontendTest {
     assertThat(mainCodeIssueScannerAndFilter.endOfAnalysisInvocationCount).isEqualTo(1);
   }
 
- @Test
+  @Test
   void should_handle_compilation_error_in_batch_mode() throws IOException {
     MapSettings settings = new MapSettings();
     settings.setProperty("sonar.java.internal.batchMode", "true");
-    scan(settings, "class A {}", "class B {", "class C {}");
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B {", "class C {}");
     String allLogs = String.join("\n", logTester.logs());
     assertThat(allLogs).contains("Unable to parse source file : 'B.java'");
-    assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(2);
+    assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(3);
     assertThat(mainCodeIssueScannerAndFilter.endOfAnalysisInvocationCount).isEqualTo(1);
   }
 
@@ -241,7 +272,7 @@ class JavaFrontendTest {
     MapSettings settings = new MapSettings();
     settings.setProperty("sonar.java.internal.batchMode", "true");
     mainCodeIssueScannerAndFilter.exceptionDuringScan = new IllegalRuleParameterException("Test AnalysisException", new NullPointerException());
-    assertThatThrownBy(() -> scan(settings, "class A {}", "class B {}", "class C {}"))
+    assertThatThrownBy(() -> scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B {}", "class C {}"))
       .isInstanceOf(AnalysisException.class)
       .hasMessage("Bad configuration of rule parameter");
   }
@@ -252,7 +283,7 @@ class JavaFrontendTest {
     settings.setProperty("sonar.java.internal.batchMode", "true");
     InputFile brokenFile = mock(InputFile.class);
     when(brokenFile.charset()).thenThrow(new NullPointerException());
-    scan(settings, Collections.singletonList(brokenFile));
+    scan(settings, SONARQUBE_RUNTIME, Collections.singletonList(brokenFile));
     assertThat(logTester.logs(LoggerLevel.ERROR)).
       containsExactly("Batch Mode failed, analysis of Java Files stopped.");
   }
@@ -265,21 +296,53 @@ class JavaFrontendTest {
     InputFile brokenFile = mock(InputFile.class);
     when(brokenFile.charset()).thenThrow(new NullPointerException());
     List<InputFile> inputFiles = Collections.singletonList(brokenFile);
-    assertThatThrownBy(() -> scan(settings, inputFiles))
+    assertThatThrownBy(() -> scan(settings, SONARQUBE_RUNTIME, inputFiles))
       .isInstanceOf(AnalysisException.class)
       .hasMessage("Batch Mode failed, analysis of Java Files stopped.");
   }
 
   @Test
+  void test_preview_feature_in_max_supported_version_do_not_log_message() throws IOException {
+    // When the the actual version match the maximum supported version (currently 17), the preview features flag is
+    // enabled in the parser config and we made sure to be able to parse preview features, no need to log anything.
+    logTester.setLevel(LoggerLevel.DEBUG);
+    scan(new MapSettings().setProperty(JavaVersion.SOURCE_VERSION, "17"),
+      SONARLINT_RUNTIME, "class A { void m(String s) { switch(s) { case null: default: } } }");
+    assertThat(sensorContext.allAnalysisErrors()).isEmpty();
+    String allLogs = String.join("\n", logTester.logs());
+    assertThat(allLogs).doesNotContain("Unresolved imports/types", "Use of preview features");
+  }
+
+  @Test
   void test_preview_feature_log_message() throws IOException {
+    // When the the actual version is greater than the maximum supported version (currently 17),
+    // we can not guarantee the correct behavior of preview features and log a message.
+    logTester.setLevel(LoggerLevel.DEBUG);
+    scan(new MapSettings().setProperty(JavaVersion.SOURCE_VERSION, "18"),
+      SONARLINT_RUNTIME, "class A { void m(String s) { switch(s) { case null: default: } } }");
+    assertThat(sensorContext.allAnalysisErrors()).isEmpty();
+    assertTrue(logTester.logs(LoggerLevel.WARN).stream().noneMatch(l -> l.endsWith("Unresolved imports/types have been detected during analysis. Enable DEBUG mode to see them.")));
+    assertTrue(logTester.logs(LoggerLevel.WARN).stream().anyMatch(l -> l.endsWith("Use of preview features have been detected during analysis. Enable DEBUG mode to see them.")));
+    // We should keep this message or we won't have anything actionable in the debug logs to understand the warning
+    assertTrue(logTester.logs(LoggerLevel.DEBUG).stream().anyMatch(l -> l.replace("\r\n", "\n").endsWith("Use of preview features:\n" +
+      "- Pattern Matching in Switch is a preview feature and disabled by default.")));
+    assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(1);
+    assertThat(testCodeIssueScannerAndFilter.scanFileInvocationCount).isZero();
+  }
+
+  @Test
+  void test_sealed_classes_in_java_16_log_message() throws IOException {
+    // When the the actual version is lower than the maximum supported version (currently 17),
+    // we can not guarantee that we are still parsing preview features the same way (it may have evolved) and log a message.
     logTester.setLevel(LoggerLevel.DEBUG);
     scan(new MapSettings().setProperty(JavaVersion.SOURCE_VERSION, "16"),
-      "sealed class Shape { } sealed class Circle extends Shape { }");
+      SONARLINT_RUNTIME, "sealed class Shape permits Circle { } final class Circle extends Shape { }");
     assertThat(sensorContext.allAnalysisErrors()).isEmpty();
-    assertTrue(logTester.logs(LoggerLevel.WARN).stream().anyMatch(l -> l.endsWith("Unresolved imports/types have been detected during analysis. Enable DEBUG mode to see them.")));
+    assertTrue(logTester.logs(LoggerLevel.WARN).stream().noneMatch(l -> l.endsWith("Unresolved imports/types have been detected during analysis. Enable DEBUG mode to see them.")));
+    assertTrue(logTester.logs(LoggerLevel.WARN).stream().anyMatch(l -> l.endsWith("Use of preview features have been detected during analysis. Enable DEBUG mode to see them.")));
     // We should keep this message or we won't have anything actionable in the debug logs to understand the warning
-    assertTrue(logTester.logs(LoggerLevel.DEBUG).stream().anyMatch(l -> l.replace("\r\n", "\n").endsWith("Unresolved imports/types:\n" +
-      "- Sealed Types is a preview feature and disabled by default. Use --enable-preview to enable")));
+    assertTrue(logTester.logs(LoggerLevel.DEBUG).stream().anyMatch(l -> l.replace("\r\n", "\n").endsWith("Use of preview features:\n" +
+      "- The Java feature 'Sealed Types' is only available with source level 17 and above")));
     assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(1);
     assertThat(testCodeIssueScannerAndFilter.scanFileInvocationCount).isZero();
   }
@@ -288,18 +351,163 @@ class JavaFrontendTest {
   void test_java17_feature() throws IOException {
     logTester.setLevel(LoggerLevel.DEBUG);
     scan(new MapSettings().setProperty(JavaVersion.SOURCE_VERSION, "17"),
-      "sealed class Shape { } sealed class Circle extends Shape { }");
+      SONARLINT_RUNTIME, "sealed class Shape permits Circle { } final class Circle extends Shape { }");
     String allLogs = String.join("\n", logTester.logs());
-    assertFalse(allLogs.contains("Unresolved imports/types"));
+    assertThat(allLogs).doesNotContain("Unresolved imports/types", "Use of preview features");
     assertThat(mainCodeIssueScannerAndFilter.scanFileInvocationCount).isEqualTo(1);
     assertThat(testCodeIssueScannerAndFilter.scanFileInvocationCount).isZero();
   }
 
-  private List<InputFile> scan(String... codeList) throws IOException {
-    return scan(new MapSettings(), codeList);
+  @Test
+  void test_scan_as_batch_uses_MAX_BATCH_SIZE_when_no_batch_size_is_configured() throws IOException {
+    MapSettings settings = new MapSettings().setProperty(SonarComponents.SONAR_BATCH_MODE_KEY, true);
+    logTester.setLevel(LoggerLevel.DEBUG);
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B extends A {}");
+    String allLogs = String.join("\n", logTester.logs());
+    assertThat(allLogs)
+      .doesNotContain("Unresolved imports/types")
+      .contains("Scanning in a single batch");
   }
 
-  private List<InputFile> scan(MapSettings settings, String... codeList) throws IOException {
+  @Test
+  void test_scan_as_batch_uses_configured_batch_size_when_below_threshold() throws IOException {
+    MapSettings settings = new MapSettings()
+      .setProperty(SonarComponents.SONAR_BATCH_MODE_KEY, true)
+      .setProperty(SonarComponents.SONAR_BATCH_SIZE_KEY, 1);
+    logTester.setLevel(LoggerLevel.DEBUG);
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B extends A {}");
+    String allLogs = String.join("\n", logTester.logs());
+    assertThat(allLogs)
+      .doesNotContain("Unresolved imports/types")
+      .containsOnlyOnce("Scanning with batch size 1000 B");
+  }
+
+  @Test
+  void test_scan_in_a_single_batch_when_batch_size_overflows() throws IOException {
+    long overTheTopBatchSize = 9_223_372_036_855_038L;
+    MapSettings settings = new MapSettings()
+      .setProperty(SonarComponents.SONAR_BATCH_MODE_KEY, true)
+      .setProperty(SonarComponents.SONAR_BATCH_SIZE_KEY, overTheTopBatchSize);
+    logTester.setLevel(LoggerLevel.DEBUG);
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B extends A {}");
+    String allLogs = String.join("\n", logTester.logs());
+    assertThat(allLogs)
+      .doesNotContain("Unresolved imports/types")
+      .doesNotContainPattern("Scanning with batch size .*")
+      .contains("Scanning in a single batch");
+  }
+
+  @Test
+  void test_scan_as_batch_effectively_splits_scans_in_batches() throws IOException {
+    MapSettings settings = new MapSettings()
+      .setProperty(SonarComponents.SONAR_BATCH_SIZE_KEY, 0);
+    logTester.setLevel(LoggerLevel.DEBUG);
+    scan(settings, SONARQUBE_RUNTIME, "class A {}", "class B extends A {}");
+    String allLogs = String.join("\n", logTester.logs());
+    assertThat(allLogs)
+      .contains("Unresolved imports/types")
+      .contains("Scanning with batch size 0 B");
+  }
+
+  @Test
+  void batch_generator_returns_an_empty_list_when_no_input_files() throws IOException {
+    List<InputFile> emptyList = Collections.emptyList();
+    JavaFrontend.BatchGenerator generator = new JavaFrontend.BatchGenerator(emptyList.iterator(), 0);
+    assertThat(generator.hasNext()).isFalse();
+    assertThat(generator.next()).isEmpty();
+  }
+
+  @Test
+  void batch_generator_returns_at_most_one_item_per_batch_when_size_is_zero() throws IOException {
+    if (sensorContext == null) {
+      File baseDir = temp.getRoot().getAbsoluteFile();
+      sensorContext = SensorContextTester.create(baseDir);
+      sensorContext.setSettings(new MapSettings());
+    }
+    List<InputFile> inputFiles = new ArrayList<>();
+    inputFiles.add(addFile("class A {}", sensorContext));
+    inputFiles.add(addFile("class B extends A {}", sensorContext));
+    JavaFrontend.BatchGenerator generator = new JavaFrontend.BatchGenerator(inputFiles.iterator(), 0);
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next())
+      .hasSize(1)
+      .contains(inputFiles.get(0));
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next())
+      .hasSize(1)
+      .contains(inputFiles.get(1));
+    assertThat(generator.hasNext()).isFalse();
+    assertThat(generator.next()).isEmpty();
+  }
+
+  @Test
+  void batch_generator_returns_batches_with_multiple_files_that_are_smaller_than_batch_size() throws IOException {
+    if (sensorContext == null) {
+      File baseDir = temp.getRoot().getAbsoluteFile();
+      sensorContext = SensorContextTester.create(baseDir);
+      sensorContext.setSettings(new MapSettings());
+    }
+    InputFile A = addFile("class A { public void doSomething() {} }", sensorContext);
+    InputFile B = addFile("class B extends A {}", sensorContext);
+    InputFile C = addFile("class C {}", sensorContext);
+
+    long sizeofA = A.file().length() + 1;
+    JavaFrontend.BatchGenerator generator = new JavaFrontend.BatchGenerator(
+      Arrays.asList(A, B, C).iterator(), sizeofA
+    );
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next()).hasSize(1).contains(A);
+    assertThat(generator.hasNext()).isTrue();
+    List<InputFile> batchWithMultipleFiles = generator.next();
+    assertThat(batchWithMultipleFiles).hasSize(2).contains(B).contains(C);
+    long batchSize = batchWithMultipleFiles.stream().map(i -> i.file().length()).reduce(0L, Long::sum);
+    assertThat(batchSize).isLessThanOrEqualTo(sizeofA);
+    assertThat(generator.hasNext()).isFalse();
+    assertThat(generator.next()).isEmpty();
+
+    long sizeOfAPlusB = A.file().length() + B.file().length();
+    generator = new JavaFrontend.BatchGenerator(
+      Arrays.asList(A, B, C).iterator(), sizeOfAPlusB
+    );
+    assertThat(generator.hasNext()).isTrue();
+    batchWithMultipleFiles = generator.next();
+    assertThat(batchWithMultipleFiles).hasSize(2).contains(A).contains(B);
+    batchSize = batchWithMultipleFiles.stream().map(i -> i.file().length()).reduce(0L, Long::sum);
+    assertThat(batchSize).isLessThanOrEqualTo(sizeOfAPlusB);
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next()).hasSize(1).contains(C);
+    assertThat(generator.hasNext()).isFalse();
+    assertThat(generator.next()).isEmpty();
+  }
+
+  @Test
+  void batch_generator_includes_file_excluded_from_previous_batch_into_next_batch() throws IOException {
+    if (sensorContext == null) {
+      File baseDir = temp.getRoot().getAbsoluteFile();
+      sensorContext = SensorContextTester.create(baseDir);
+      sensorContext.setSettings(new MapSettings());
+    }
+    InputFile A = addFile("class A { public void doSomething() {} }", sensorContext);
+    InputFile B = addFile("class B extends A {}", sensorContext);
+    InputFile C = addFile("class C {}", sensorContext);
+    JavaFrontend.BatchGenerator generator = new JavaFrontend.BatchGenerator(
+      Arrays.asList(A, C, B).iterator(), C.file().length()
+    );
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next()).hasSize(1).contains(A);
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next()).hasSize(1).contains(C);
+    assertThat(generator.hasNext()).isTrue();
+    assertThat(generator.next()).hasSize(1).contains(B);
+    assertThat(generator.hasNext()).isFalse();
+    assertThat(generator.next()).isEmpty();
+  }
+
+  private List<InputFile> scan(SonarRuntime sonarRuntime, String... codeList) throws IOException {
+    return scan(new MapSettings(), sonarRuntime, codeList);
+  }
+
+  private List<InputFile> scan(MapSettings settings, SonarRuntime sonarRuntime, String... codeList) throws IOException {
     if (sensorContext == null) {
       File baseDir = temp.getRoot().getAbsoluteFile();
       sensorContext = SensorContextTester.create(baseDir);
@@ -309,18 +517,16 @@ class JavaFrontendTest {
     for (String code : codeList) {
       inputFiles.add(addFile(code, sensorContext));
     }
-    return scan(settings, inputFiles);
+    return scan(settings, sonarRuntime, inputFiles);
   }
 
-  private List<InputFile> scan(MapSettings settings, List<InputFile> inputFiles) throws IOException {
+  private List<InputFile> scan(MapSettings settings, SonarRuntime sonarRuntime, List<InputFile> inputFiles) throws IOException {
     if (sensorContext == null) {
       File baseDir = temp.getRoot().getAbsoluteFile();
       sensorContext = SensorContextTester.create(baseDir);
       sensorContext.setSettings(settings);
     }
-
-    // Set sonarLint runtime
-    sensorContext.setRuntime(SonarRuntimeImpl.forSonarLint(Version.create(6, 7)));
+    sensorContext.setRuntime(sonarRuntime);
 
     // Mock visitor for metrics.
     fileLinesContext = mock(FileLinesContext.class);
@@ -382,6 +588,7 @@ class JavaFrontendTest {
     public boolean accept(FilterableIssue issue, IssueFilterChain chain) {
       return true;
     }
+
     @Override
     public void endOfAnalysis() {
       endOfAnalysisInvocationCount++;
